<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="3dp"
    android:layout_margin="@dimen/card_margin_small"
    app:cardCornerRadius="6dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="10">
        <ImageView
            android:id="@+id/car_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:contentDescription="@string/car_image_description"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:padding="5dp"
            android:orientation="vertical">
        <TextView
            android:id="@+id/txt_car_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:text="@string/car_model"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:ellipsize="end"
            android:maxLines="1"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/txt_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/car_price"
                android:textColor="@color/LimeText"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/txt_price"
                android:layout_alignEnd="@id/txt_price"
                android:layout_marginEnd="-40dp"
                android:text="@string/car_currency"
                android:textColor="@color/LimeText"
                android:textSize="18sp" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp"
            android:layout_marginTop="10dp"
            android:weightSum="3.1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/grayText"
                    android:id="@+id/txt_lot_title"
                    android:text="@string/txt_lot"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_lot_value"
                    android:textSize="12sp"/>
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="?android:attr/listDivider" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/grayText"
                    android:id="@+id/txt_bids_title"
                    android:text="@string/txt_bids"
                    android:textSize="12sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_bids_value"
                    android:textSize="12sp"/>
            </LinearLayout>
            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/grayText"
                    android:id="@+id/txt_time_title"
                    android:text="@string/txt_time"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:id="@+id/txt_time_value"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>